<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="50"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_no_vis"
        android:icon="@drawable/ic_menu_no_vis_appbar"
        android:orderInCategory="100"
        android:title="@string/action_no_vis"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_menu_about"
        android:orderInCategory="10"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_manage"
        android:orderInCategory="11"
        android:title="@string/menu_action_settings"
        app:showAsAction="never" />
</menu>