<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_threads">

    <fragment
        android:id="@+id/nav_conversations"
        android:name="com.lolson.encryptsms.ui.conversation.ConversationFragment"
        android:label="@string/menu_conversation"
        tools:layout="@layout/activity_conversation_detail" />

    <fragment
        android:id="@+id/nav_threads"
        android:name="com.lolson.encryptsms.ui.threads.ThreadFragment"
        android:label="@string/menu_threads"
        tools:layout="@layout/fragment_threads" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.lolson.encryptsms.ui.about.AboutFragment"
        android:label="@string/menu_nav_about"
        tools:layout="@layout/fragment_about" />
</navigation>