<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/messageBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:stackFromEnd="true"
        tools:listitem="@layout/message_list_item_in" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:progress="45"
        tools:progressTint="@color/tools_theme" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/composeBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="messageBackground,attachments,attach,message,counter,send" />

    <View
        android:id="@+id/messageBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_rectangle_22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send"
        app:layout_constraintStart_toEndOf="@id/attach"
        app:layout_constraintTop_toTopOf="@id/attachments" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/message"
        app:layout_constraintEnd_toEndOf="@id/messageBackground"
        app:layout_constraintStart_toStartOf="@id/messageBackground"
        tools:listitem="@layout/attachment_image_list_item" />

    <EditText
        android:id="@+id/message"
        style="@style/TextPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/compose_hint"
        android:inputType="textLongMessage|textCapSentences|textMultiLine"
        android:maxLines="6"
        android:minHeight="44dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColorHint="?android:attr/textColorTertiary"
        app:layout_constraintBottom_toBottomOf="@id/messageBackground"
        app:layout_constraintEnd_toStartOf="@id/sim"
        app:layout_constraintStart_toStartOf="@id/messageBackground" />

    <ImageView
        android:id="@+id/sim"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:contentDescription="@string/compose_sim_cd"
        android:padding="8dp"
        android:src="@drawable/ic_sim_card_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/messageBackground"
        app:layout_constraintEnd_toEndOf="@id/messageBackground"
        app:tint="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/simIndex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/sim"
        app:layout_constraintEnd_toEndOf="@id/sim"
        app:layout_constraintStart_toStartOf="@id/sim"
        app:layout_constraintTop_toTopOf="@id/sim"
        tools:ignore="SpUsage"
        tools:text="1" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@id/send"
        app:layout_constraintEnd_toEndOf="@id/send"
        app:layout_constraintStart_toStartOf="@id/send"
        tools:text="108 / 2" />

    <ImageView
        android:id="@+id/send"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/compose_send_cd"
        android:padding="10dp"
        android:src="@drawable/ic_send_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/messageBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?android:textColorSecondary" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="140dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/ToolbarText"
                android:layout_height="wrap_content"
                tools:text="Love Bacon" />

            <TextView
                android:id="@+id/toolbarSubtitle"
                style="@style/ToolbarText"
                android:textColor="?android:attr/textColorTertiary"
                android:visibility="gone"
                tools:text="3 of 9 results" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:scrollbars="vertical"
                tools:visibility="gone" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/ab_shadow"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/attaching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="contact,contactLabel,schedule,scheduleLabel,gallery,galleryLabel,camera,cameraLabel,attachingBackground" />

    <View
        android:id="@+id/attachingBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#44000000"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/contact"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/compose_contact_cd"
        android:elevation="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_person_black_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/schedule"
        app:layout_constraintEnd_toEndOf="@id/attach"
        app:layout_constraintStart_toStartOf="@id/attach"
        app:tint="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/contactLabel"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_rectangle_4dp"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/compose_contact_cd"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/contact"
        app:layout_constraintStart_toEndOf="@id/contact"
        app:layout_constraintTop_toTopOf="@id/contact" />

    <ImageView
        android:id="@+id/schedule"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/compose_schedule_cd"
        android:elevation="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_event_black_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/gallery"
        app:layout_constraintEnd_toEndOf="@id/attach"
        app:layout_constraintStart_toStartOf="@id/attach"
        app:tint="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/scheduleLabel"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_rectangle_4dp"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/compose_schedule_cd"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/schedule"
        app:layout_constraintStart_toEndOf="@id/schedule"
        app:layout_constraintTop_toTopOf="@id/schedule" />

    <ImageView
        android:id="@+id/gallery"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/compose_gallery_cd"
        android:elevation="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_insert_photo_black_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/camera"
        app:layout_constraintEnd_toEndOf="@id/attach"
        app:layout_constraintStart_toStartOf="@id/attach"
        app:tint="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/galleryLabel"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_rectangle_4dp"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/compose_gallery_cd"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/gallery"
        app:layout_constraintStart_toEndOf="@id/gallery"
        app:layout_constraintTop_toTopOf="@id/gallery" />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/compose_camera_cd"
        android:elevation="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_camera_alt_black_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/attach"
        app:layout_constraintEnd_toEndOf="@id/attach"
        app:layout_constraintStart_toStartOf="@id/attach"
        app:tint="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/cameraLabel"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_rectangle_4dp"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/compose_camera_cd"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/camera"
        app:layout_constraintStart_toEndOf="@id/gallery"
        app:layout_constraintTop_toTopOf="@id/camera" />

    <ImageView
        android:id="@+id/attach"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/compose_attach_cd"
        android:elevation="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/messageBackground"
        app:layout_constraintStart_toStartOf="parent"
        tools:backgroundTint="@color/tools_theme"
        tools:tint="@color/textPrimaryDark" />

</androidx.constraintlayout.widget.ConstraintLayout>